--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env DB_ENV=testing jest --watch",
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Lambda Students",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
